# nadie

./: .gitignore  20200229a.yaml  O.ipynb  README.md  kinetic_includes
nadie_control/: CMakeLists.txt  package.xml  shell_notes.txt
nadie_control/arduino/ArduinoSensorPub/: ArduinoSensorPub.ino  ArduinoSensors.h  TMP102.cpp  TMP102.h
nadie_control/camera_info/: global_shutter_1280_720.yaml
nadie_control/config/: calib_odometry.json  controller.yaml  nadie_controller.yaml  nimbus_joystick.yaml  rtabmap.ini
nadie_control/configuration_files/: nadie2.lua
nadie_control/include/nadie_control/: calibrate.h  motor_controller.h  nadie_motor_controller.h  wimble_robotics_motor_controller.h
nadie_control/launch/: 20200305a.pgm  20200305a.yaml  amcl.launch  build_map.launch  calibrate.launch  cameras.launch  closest_obj.launch  d435_and_t265.launch  debug.config  fiducial.launch  foo.launch  launcher.launch  machines.xml  motor.launch  move_base.launch  move_base_realsense.launch  nadie.launch  nadie2.launch  nadie2_amcl.launch  nadie2_cartographer.launch  nadie2_cartographer_localization.launch  nadie2_d435.launch  nadie2_d435_left.launch  nadie2_d435_pair.launch  nadie2_d435_right.launch  nadie2_d435b.launch  nadie2_joystick.launch  nadie2_merge_lasers.launch  nadie2_motor.launch  nadie2_move_base.launch  nadie2_pointcloud_to_laserscan.launch  nadie2_pointcloud_to_left_laserscan.launch  nadie2_pointcloud_to_right_laserscan.launch  nadie2_pointcloudb_to_laserscan.launch  nadie2_sim.launch  nadie2_t265a.launch  nadie_d435.launch  nadie_joystick.launch  nadie_motor.launch  nadie_realsense.launch  (+19 more)
nadie_control/launch/includes/: arg_set.xml  nodelet.launch.xml  nodelet.launch.xml.orig
nadie_control/launch/nadie3/: amcl.launch  cart_localization.launch  d435_pair.launch  d435i.launch  joystick.launch  lidar.launch  machines.xml  motor.launch  move_base.launch  nav.launch  nonmotor.launch  rs_camera.launch  t265a.launch
nadie_control/msg/: ArduinoSensors.msg  RoboClawStatus.msg
nadie_control/obsolete/: rtabmap.ini
nadie_control/obsolete/camera_info/: global_shutter_1280_720.txt
nadie_control/obsolete/cfg/: motor_controller.cfg
nadie_control/obsolete/config/: rtabmap.ini
nadie_control/obsolete/launch/: closest_obj.launch  d435_and_t265.launch  debug.config  nadie.launch  nadie2_amcl.launch  nadie2_cartographer.launch  nadie2_joystick.launch  nadie2_nonmotor.launch  nadie2_t265a.launch  neato_lidar.launch
nadie_control/obsolete/param/: global_costmap_params.yaml
nadie_control/obsolete/test/: M1.cpp
nadie_control/obsolete/test/cfg/: motor.yaml
nadie_control/obsolete/test/config/: controller.yaml
nadie_control/obsolete/test/launch/: motor_controller.launch
nadie_control/obsolete/world/: Home3
nadie_control/obsolete/world/Home2/: model.config  model.sdf
nadie_control/param/: base_local_planner_params.yaml  cmd_vel_mux.yaml  costmap_common_params.yaml  costmap_common_realsense_params.yaml  global_costmap_params.yaml  global_costmap_realsense_params.yaml  local_costmap_params.yaml  local_costmap_realsense_params.yaml  twist_mux.yaml
nadie_control/param/nadie3/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nadie2_localization.lua  nadie_controller.yaml
nadie_control/scripts/: bag1.py  current.py  mikeWasHere.sh  testLaser.py  trace.py
nadie_control/src/: calibrate.cpp  calibrate_node.cpp  closest_obj.cpp  motor_controller.cpp  motor_controller_node.cpp  nadie_motor_controller.cpp  wimble_robotics_motor_controller.cpp
nadie_control/test/: M2.cpp
nadie_control/test/launch/: M2.test  motor_controller.launch
nadie_control/test/urdf/: nadie.xacro  wheel.urdf.xacro
nadie_control/urdf/: caster.urdf.xacro  lidar_sim.xacro  nadie.xacro  urdf.rviz  wheel.urdf.xacro
nadie_control/world/: test  world2.world  world3.world  world4.world  world5.world
nadie_description/: CMakeLists.txt  package.xml
nadie_description/launch/: description.launch
nadie_description/urdf/: _d435.urdf.xacro  caster.urdf.xacro  gazebo.urdf.xacro  nadie.urdf.xacro  wheel.urdf.xacro
nadie_rviz/: CMakeLists.txt  control.rviz  package.xml
pibota/: CMakeLists.txt  package.xml
pibota/camera_info/: 640x480_ost.yaml  camerav2_1280x720.miranda.yaml
pibota/launch/: #picam.launch#  pibota.launch  pibotb.launch  picam.launch
snowberry_map/: CMakeLists.txt  package.xml
snowberry_map/config/: lidar_sim_config.yaml
snowberry_map/launch/: empty_map.launch  map.launch  nadie2.map.launch
snowberry_map/maps/: 1144SnowberryCourtv18d.psd  20200225a.map.pgm  20200225a.map.yaml  map.pgm  map_20190416_1132.yaml  map_20190426_1610.yaml  map_20190428_1053 copy.pgm  map_20190428_1053.pgm.old  map_20190428_1053.yaml  map_20190428_1053a.pgm
snowberry_map/maps/SnowberryCta/: model.config  model.sdf
udev_rules/: 95.neato.rules  96.roboclaw.rules
wr_aruco/: CMakeLists.txt  package.xml
wr_aruco/cfg/: 640x480_ost.yaml  DetectorParams.cfg  ost.txt  ost.yaml  wr_aruco.yaml  wr_aruco_camera.yaml
wr_aruco/include/wr_aruco/: wr_aruco.h
wr_aruco/launch/: calibrate.launch  wr_aruco.launch
wr_aruco/msg/: FiducialMapEntry.msg  FiducialMapEntryArray.msg
wr_aruco/src/: wr_aruco.cpp  wr_aruco_node.cpp
