<?xml version="1.0"?>
<package format="2">
  <name>wr_aruco</name>
  <version>1.0.0</version>
  <description>The wr_aruco package</description>
  <maintainer email="mike@wimblerobotics.com">pi</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/wimblerobotics/nadie/wiki</url> -->
  <author email="mike@wimblerobotics.com">Michael Wimble</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>

  <depend>compressed_image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>opencv3</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>